# fastapi-starter

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
config/: auth.py  env.py  hasher.py  rate_limiter.py  session.py  user_identifier.py
models/: __init__.py
models/user/: user.py
routers/: router.py
routers/user/: auth.py  user.py
schemas/: base.py
schemas/user/: user.py
services/user/: auth.py  user.py
